updated pom.xml for new dependency plugin

--- a/pom.xml
+++ b/pom.xml
@@ -158,13 +158,13 @@
           </execution>
         </executions>
       </plugin>
-      <!-- owasp-dependency - added by KZN -->
+      <!-- owasp-dependency - added by KZN
       <plugin>
           <groupId>org.owasp</groupId>
           <artifactId>dependency-check-maven</artifactId>
           <version>5.0.0-M2</version>
           <configuration>
-              <!-- <failBuildOnCVSS>8</failBuildOnCVSS> -->
+              <failBuildOnCVSS>8</failBuildOnCVSS>
               <format>ALL</format>
               <skipProvidedScope>true</skipProvidedScope>
               <skipRuntimeScope>true</skipRuntimeScope>
@@ -177,7 +177,27 @@
               </execution>
           </executions>
       </plugin>      
-      <!-- owasp-dependency - added by KZN -->
+      owasp-dependency - added by KZN -->
+        <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>5.2.2</version>
+        <configuration>
+            <cveUrlModified>https://www.lhorn.de/nist/nvdcve-1.0-modified.json.gz</cveUrlModified>
+            <cveUrlBase>https://www.lhorn.de/nist/nvdcve-1.0-%d.json.gz</cveUrlBase>
+        </configuration>
+        <executions>
+            <execution>
+                <goals>
+                    <goal>check</goal>
+                </goals>
+                <configuration>
+                    <format>xml</format>
+                </configuration>
+            </execution>
+        </executions>
+      </plugin>
+        
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
